--- a/css/modal.css
+++ b/css/modal.css
@@ -1,55 +1,59 @@
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 9999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  border-radius: 5px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#resultado-todos-users {
+  margin: -3% auto 50px auto;
+}
+
+#resultado-todos-users .lista {
+  background-color: #ededed70;
+}
+
+
+@media (max-width: 700px) {
+  #resultado-todos-users {
+    margin: -10% auto 50px auto;
+    height: 50%;
+    overflow-y: scroll;
   }
   
+
   .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    border-radius: 5px;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  #resultado-todos-users{
-    margin: -3% auto 50px auto;
-  }
-  #resultado-todos-users .lista{
-      background-color: #ededed70;
+    margin: 15% auto;
+
   }
 
 
-  @media (max-width: 700px){
-    #resultado-todos-users{
-      margin: -10% auto 50px auto;
-    }
-
-    .modal-content {     
-      margin: 15% auto;
-     
-    }
-    
-    
 }
