--- a/css/modal.css
+++ b/css/modal.css
@@ -45,7 +45,7 @@
 @media (max-width: 700px) {
   #resultado-todos-users {
     margin: -10% auto 50px auto;
-    height: 50%;
+    height: 60vh;
     overflow-y: scroll;
   }
   
